# Ecog-glioma

./: .gitignore  README.md  pyproject.toml
openspec/changes/archive/2026-05-20-export-clean-fif-to-bids/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-build-ecog-boundary-analysis-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-27-audit-dynamic-phenotype-main-vs-sensitivity/: design.md  proposal.md  tasks.md
openspec/specs/bipolar-boundary-manifest/: spec.md
openspec/specs/boundary-analysis-reporting/: spec.md
openspec/specs/coupling-robustness-analysis/: spec.md
openspec/specs/dynamic-phenotype-audit/: spec.md
openspec/specs/ecog-boundary-feature-extraction/: spec.md
openspec/specs/fif-to-bids-export/: spec.md
scripts/: README.md  bids_qc_report.py  build_label_manifest.py  eeg_prop_manual.py  export_model_tables.py  fif_to_bids.py  run_controllability.py  run_fragility.py  run_hfo.py  run_pipeline_v2.py  run_r_reporting.py  run_static_network.py
scripts_r/: run_boundary_figures.Rmd  run_boundary_figures.knit.md  run_boundary_models.Rmd  run_boundary_models.knit.md  run_boundary_reporting.R  theme_khaki.R
src/ecog_glioma/: __init__.py  _mne_env.py  bids_io.py  bipolar.py  config.py  coupling_robustness.py  dynamic.py  dynamic_audit.py  export_tables.py  hfo.py  labels.py  paths.py  pipeline.py  reporting.py  run_context.py  static_network.py  utils.py
test/: test_export_tables.py  test_labels_and_windows.py  test_reporting_and_audit.py  test_static_network.py
(+10 files in other folders)
