[project]
name = "ecog-glioma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = 'LIONGAME\LIONGAME', email = "1311096102@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mne[full]>=1.12.1",
    "openpyxl>=3.1.5",
]

[project.scripts]
ecog-glioma = "ecog_glioma:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
